[package]
name = "mikit_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.17.0", features = ["full"] }
reqwest = {version="0.11",features=["json"]}
rust-crypto = "0.2.36"
base64 = "0.13.0"
rand = "0.8.5"
serde ={version="1.0",features=["derive"]}
serde_json = "1.0"
log = "0.4"
urlencoding = "2.1.0"
sled = "0.34"